# transmission-telegram-private-bot

./: .gitignore  Dockerfile  LICENSE  README.md  TransmissionConnection.py  bot.py  consts.py  pyproject.toml  requirements.txt  shedule.py
