[tool.poetry]
name = "transmission-telegram-private-bot"
version = "0.1.0"
description = "Manage transmission client with telegram bot"
authors = ["Nikita Meshchaninov <dev@nikita.ninja>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astroid = "2.3.3"
certifi = "2019.11.28"
chardet = "3.0.4"
gunicorn = "20.0.4"
idna = "2.6"
isort = "4.3.21"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
pylint = "2.4.4"
pysocks = "1.7.1"
pytelegrambotapi = "3.6.7"
requests = "2.18.4"
schedule = "0.6.0"
six = "1.14.0"
transmissionrpc = "0.11"
urllib3 = "1.22"
wrapt = "1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
